koffice (1:1.1.0-1) unstable; urgency=low

  * New upstream release.
  * Removed debconf warning for pre-1.1-final releases.
  * Upped standards-version to 3.5.6.

 -- Ben Burton <benb@acm.org>  Sun,  5 Aug 2001 23:45:23 +1000

koffice (1:1.1-rc1-1) unstable; urgency=low

  * New upstream release.
  * Renamed package killustrator to kontour.
  * Removed package krayon.
  * Rebuilt with newer admin files (closes: Bug#105209).
  * Added kdebase-dev to build-depends.
  * Builds on alpha.

 -- Ben Burton <benb@acm.org>  Tue, 31 Jul 2001 12:23:44 +1000

koffice (1:1.1-beta3-3) unstable; urgency=low

  * Added kivio stencils to copyright file (closes: Bug#103659).

 -- Ben Burton <benb@acm.org>  Mon,  9 Jul 2001 00:52:28 +1000

koffice (1:1.1-beta3-2) unstable; urgency=low

  * Build-Depends: Requires at least KDE 2.2.
  * kformula: Linked locolor icons to hicolor icons to satisfy KDE 2.2.
  * koffice-libs: Added Spanish template file (closes: Bug#103064).

 -- Ben Burton <benb@acm.org>  Mon,  2 Jul 2001 02:01:01 -0500

koffice (1:1.1-beta3-1) unstable; urgency=low

  * New upstream release (closes: #75750, #90686, #98370, #101017, #101951).
  * Pulled latest kugar docs from CVS.
  * Happy birthday to me! :)

 -- Ben Burton <benb@acm.org>  Thu, 28 Jun 2001 01:21:00 -0500

koffice (1:1.1-beta2-3) unstable; urgency=low

  * Added arm/m68k to the libtool linux arch list in the hope of closing
    #99475 (we'll see if it works).
  * Moved libqproimport and libxfigimport and associated files to
    packages kspread and killustrator respectively.

 -- Ben Burton <benb@acm.org>  Fri,  1 Jun 2001 18:29:27 -0500

koffice (1:1.1-beta2-2) unstable; urgency=low

  * Changed package koffice to Architecture: any to satisfy autobuilders.

 -- Ben Burton <benb@acm.org>  Fri,  1 Jun 2001 01:10:12 -0500

koffice (1:1.1-beta2-1) unstable; urgency=low

  * New upstream release (closes: Bug#95931, Bug#95317).
  * Cosmetic changes to a few man pages.
