@@ -36,8 +36,8 @@ For a full summary of options, run \fIkchart \-\-help\fP.
 Some documentation from the program author
 is available in \fI/usr/share/doc/kchart/\fP.
 .SH AUTHOR
-KChart was written by Kalle Dalheimer <kalle@kde.org> and Laurent Montel
-<montell@club-internet.fr>.
+KChart was written by Kalle Dalheimer <kalle@kde.org>, Laurent Montel
+<montell@club-internet.fr> and Reginald Stadlbauer <reggie@kde.org>.
 .br
 This manual page was written by Ben Burton <benb@acm.org>
 for the Debian GNU/Linux system (but may be used by others).
