@@ -1,2 +1,2 @@
-/usr/lib/kivio/libstraight_connector.so /usr/share/apps/kivio/autoloadStencils/straight_connector.ksp
-/usr/lib/kivio/libstraight_connector.so /usr/lib/kivio/libstraight_connector.so.1
+usr/lib/kivio/libstraight_connector.so usr/share/apps/kivio/autoloadStencils/straight_connector.ksp
+usr/lib/kivio/libstraight_connector.so usr/lib/kivio/libstraight_connector.so.1
