@@ -1,2 +1,2 @@
-/usr/share/doc/kde/HTML/en/koffice /usr/share/doc/koffice-libs/html
-/usr/share/doc/kde/HTML/en/common /usr/share/doc/kde/HTML/en/koffice/common
+usr/share/doc/kde/HTML/en/koffice usr/share/doc/koffice-libs/html
+usr/share/doc/kde/HTML/en/common usr/share/doc/kde/HTML/en/koffice/common
