@@ -1,1 +1,1 @@
-/usr/share/doc/kde/HTML/en/koffice /usr/share/doc/koffice/html
+usr/share/doc/kde/HTML/en/koffice usr/share/doc/koffice/html
