@@ -37,7 +37,9 @@ For a full summary of options, run \fIkontour \-\-help\fP.
 The original documentation from the program author
 is available in \fI/usr/share/doc/kontour/\fP.
 .SH AUTHOR
-Kontour was written by Kai-Uwe Sattler <kus@iti.cs.uni-magdeburg.de> and others.
+Kontour was written by Kai-Uwe Sattler <kus@iti.cs.uni-magdeburg.de>,
+Igor Janssen <rm@linux.ru.net>, Alexander Neundorf <neundorf@kde.org>,
+Rob Buis <rwlbuis@wanadoo.nl> and Laurent Montel <lmontel@mandrakesoft.com>.
 .br
 This manual page was written by Ben Burton <benb@acm.org>
 for the Debian GNU/Linux system (but may be used by others).
