@@ -1,5 +1,4 @@
 kontour/AUTHORS
-kontour/BUGS
 kontour/IDEAS
 kontour/README
 kontour/TODO
