@@ -1,12 +1,18 @@
 usr/bin/kontour
 usr/lib/kontour.*
 usr/lib/kde2/libkontourpart.*
+usr/lib/kde2/libsvgexport.*
+usr/lib/kde2/libsvgimport.*
 usr/lib/kde2/libxfigimport.*
 usr/share/applnk/Office/killustrator.desktop
 usr/share/applnk/Office/kontour.desktop
 usr/share/apps/kontour/*
 usr/share/mimelnk/application/x-killustrator.desktop
 usr/share/mimelnk/application/x-kontour.desktop
+usr/share/mimelnk/image/x-svg.desktop
+usr/share/mimelnk/image/x-xfig.desktop
+usr/share/services/killustrator_svg_export.desktop
+usr/share/services/killustrator_svg_import.desktop
 usr/share/services/killustrator_xfig_import.desktop
 usr/share/icons/hicolor/16x16/apps/kontour.png
 usr/share/icons/hicolor/32x32/apps/kontour.png
