@@ -1,2 +1,2 @@
-/usr/share/doc/kde/HTML/en/kontour /usr/share/doc/kontour/html
-/usr/share/doc/kde/HTML/en/common /usr/share/doc/kde/HTML/en/kontour/common
+usr/share/doc/kde/HTML/en/kontour usr/share/doc/kontour/html
+usr/share/doc/kde/HTML/en/common usr/share/doc/kde/HTML/en/kontour/common
