@@ -1,2 +1,2 @@
-/usr/share/doc/kde/HTML/en/koshell /usr/share/doc/koshell/html
-/usr/share/doc/kde/HTML/en/common /usr/share/doc/kde/HTML/en/koshell/common
+usr/share/doc/kde/HTML/en/koshell usr/share/doc/koshell/html
+usr/share/doc/kde/HTML/en/common usr/share/doc/kde/HTML/en/koshell/common
