@@ -39,7 +39,8 @@ The original documentation from the program author
 is available in \fI/usr/share/doc/kpresenter/\fP.
 .SH AUTHOR
 KPresenter was written by Reginald Stadlbauer <reggie@kde.org>, Werner
-Trobin <trobin@kde.org> and David Faure <dfaure@kde.org>.
+Trobin <trobin@kde.org>, David Faure <dfaure@kde.org>,
+Toshitaka Fujioka <fujioka@kde.org> and Lukáš Tinkl <lukas@kde.org>.
 .br
 This manual page was written by Ben Burton <benb@acm.org>
 for the Debian GNU/Linux system (but may be used by others).
