@@ -1,2 +1,2 @@
-/usr/share/doc/kde/HTML/en/kpresenter /usr/share/doc/kpresenter/html
-/usr/share/doc/kde/HTML/en/common /usr/share/doc/kde/HTML/en/kpresenter/common
+usr/share/doc/kde/HTML/en/kpresenter usr/share/doc/kpresenter/html
+usr/share/doc/kde/HTML/en/common usr/share/doc/kde/HTML/en/kpresenter/common
