@@ -1,2 +1,2 @@
-kimageshop/AUTHORS
-kimageshop/TODO
+krayon/AUTHORS
+krayon/TODO
