@@ -1,2 +1,2 @@
-/usr/share/doc/kde/HTML/en/krayon /usr/share/doc/krayon/html
-/usr/share/doc/kde/HTML/en/common /usr/share/doc/kde/HTML/en/krayon/common
+usr/share/doc/kde/HTML/en/krayon usr/share/doc/krayon/html
+usr/share/doc/kde/HTML/en/common usr/share/doc/kde/HTML/en/krayon/common
