@@ -36,8 +36,8 @@ For a full summary of options, run \fIkspread \-\-help\fP.
 The original documentation from the program author
 is available in \fI/usr/share/doc/kspread/\fP.
 .SH AUTHOR
-KSpread was written by Torben Weis <weis@kde.org> and Laurent Montel
-<montell@club-internet.fr>.
+KSpread was written by Torben Weis <weis@kde.org>, Laurent Montel
+<montell@club-internet.fr>, David Faure <faure@kde.org> and others.
 .br
 This manual page was written by Ben Burton <benb@acm.org>
 for the Debian GNU/Linux system (but may be used by others).
