@@ -1,2 +1,2 @@
-/usr/share/doc/kde/HTML/en/kspread /usr/share/doc/kspread/html
-/usr/share/doc/kde/HTML/en/common /usr/share/doc/kde/HTML/en/kspread/common
+usr/share/doc/kde/HTML/en/kspread usr/share/doc/kspread/html
+usr/share/doc/kde/HTML/en/common usr/share/doc/kde/HTML/en/kspread/common
