@@ -40,8 +40,8 @@ is available in \fI/usr/share/doc/kword/\fP.
 .SH AUTHOR
 KWord was written by Reginald Stadlbauer <reggie@kde.org>, Torben Weis
 <weis@kde.org>, David Faure <dfaure@kde.org>, Thomas Zander
-<zander@kde.org>, Shaheed Haque <srhaque@iee.org> and Laurent Montel
-<lmontel@mandrakesoft.com>.
+<zander@kde.org>, Shaheed Haque <srhaque@iee.org>,
+Laurent Montel <lmontel@mandrakesoft.com> and Sven Lüppken <sven@kde.org>.
 .br
 This manual page was written by Ben Burton <benb@acm.org>
 for the Debian GNU/Linux system (but may be used by others).
