@@ -1,2 +1,4 @@
 kword/AUTHORS
+kword/DEBUG
+kword/DESIGN
 kword/TODO
