@@ -1,2 +1,2 @@
-/usr/share/doc/kde/HTML/en/kword /usr/share/doc/kword/html
-/usr/share/doc/kde/HTML/en/common /usr/share/doc/kde/HTML/en/kword/common
+usr/share/doc/kde/HTML/en/kword usr/share/doc/kword/html
+usr/share/doc/kde/HTML/en/common usr/share/doc/kde/HTML/en/kword/common
